version/0.12/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.Group.rst.txt
ansys.fluent.core.solver.flobject.Group
=======================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: Group

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~Group.__init__
      ~Group.get_active_child_names
      ~Group.get_active_command_names
      ~Group.get_active_query_names
      ~Group.get_attr
      ~Group.get_attrs
      ~Group.get_state
      ~Group.is_active
      ~Group.is_read_only
      ~Group.print_state
      ~Group.set_flproxy
      ~Group.set_state
      ~Group.to_python_keys
      ~Group.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Group.child_names
      ~Group.command_names
      ~Group.flproxy
      ~Group.fluent_name
      ~Group.obj_name
      ~Group.parent
      ~Group.path
      ~Group.query_names
   
   